--- a/Demo/CMakeLists.txt
+++ b/Demo/CMakeLists.txt
@@ -1,37 +1,61 @@
-cmake_minimum_required(VERSION 3.21)
+cmake_minimum_required (VERSION 3.21)
 
-set(TARGET_NAME straw_demo)
-project(${TARGET_NAME} VERSION 0.0.1)
+set (TARGET_NAME straw_demo)
+project (${TARGET_NAME} VERSION 0.0.1)
 
-set_property(GLOBAL PROPERTY USE_FOLDERS YES)
-option(JUCE_ENABLE_MODULE_SOURCE_GROUPS "Enable Module Source Groups" ON)
+include (FetchContent)
 
-get_filename_component(JUCE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../JUCE" ABSOLUTE)
-add_subdirectory(${JUCE_PATH} ./JUCE)
+# Set browsable modules in IDE
+set_property (GLOBAL PROPERTY USE_FOLDERS YES)
+option (JUCE_ENABLE_MODULE_SOURCE_GROUPS "Enable Module Source Groups" ON)
 
-get_filename_component(MODULES_PATH "${CMAKE_CURRENT_LIST_DIR}/../Modules" ABSOLUTE)
-add_subdirectory(${MODULES_PATH} ./Modules)
+# Fetch juce
+FetchContent_Declare (JUCE
+    GIT_REPOSITORY https://github.com/juce-framework/JUCE.git
+    GIT_TAG origin/master
+    GIT_SHALLOW 1
+    SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/JUCE)
+FetchContent_MakeAvailable (JUCE)
 
-set(Python_ROOT_DIR "/Library/Frameworks/Python.framework/Versions/Current")
-set(Python_USE_STATIC_LIBS TRUE)
-find_package(Python REQUIRED Development.Embed)
+# Fetch melatonin inspector
+FetchContent_Declare (melatonin_inspector
+  GIT_REPOSITORY https://github.com/sudara/melatonin_inspector.git
+  GIT_TAG origin/main
+  GIT_SHALLOW 1
+  SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/melatonin_inspector)
+FetchContent_MakeAvailable (melatonin_inspector)
 
-juce_add_gui_app(${TARGET_NAME} PRODUCT_NAME "Automation Example")
-juce_generate_juce_header(${TARGET_NAME})
+# Add the straw modules
+get_filename_component (MODULES_PATH "${CMAKE_CURRENT_LIST_DIR}/../Modules" ABSOLUTE)
+add_subdirectory (${MODULES_PATH} ./Modules)
 
-target_sources(${TARGET_NAME} PRIVATE Main.cpp SimpleAutomation.cpp SimpleAutomation.h)
+# Configure python
+set (Python_ROOT_DIR "/Library/Frameworks/Python.framework/Versions/Current")
+set (Python_USE_STATIC_LIBS TRUE)
+find_package (Python REQUIRED Development.Embed)
 
-set_target_properties(${TARGET_NAME} PROPERTIES JUCE_TARGET_KIND_STRING "App")
-set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD 17)
+juce_add_gui_app (${TARGET_NAME}
+    PRODUCT_NAME "Automation Example"
+    VERSION "1.0.0"
+    BUNDLE_ID "org.kunitoki.strawdemo")
+juce_generate_juce_header (${TARGET_NAME})
 
-if(APPLE)
-    set_target_properties(${TARGET_NAME} PROPERTIES OSX_ARCHITECTURES "arm64;x86_64")
-    set(STRAW_LTO "juce::juce_recommended_lto_flags")
+target_sources (${TARGET_NAME} PRIVATE
+    Main.cpp
+    SimpleAutomation.cpp
+    SimpleAutomation.h)
+
+set_target_properties (${TARGET_NAME} PROPERTIES JUCE_TARGET_KIND_STRING "App")
+set_target_properties (${TARGET_NAME} PROPERTIES CXX_STANDARD 17)
+
+if (APPLE)
+    set_target_properties (${TARGET_NAME} PROPERTIES OSX_ARCHITECTURES "arm64;x86_64")
+    set (STRAW_LTO "juce::juce_recommended_lto_flags")
 else()
-    set(STRAW_LTO "")
+    set (STRAW_LTO "")
 endif()
 
-target_compile_definitions(${TARGET_NAME} PRIVATE
+target_compile_definitions (${TARGET_NAME} PRIVATE
     JUCE_STANDALONE_APPLICATION=1
     JUCE_DISPLAY_SPLASH_SCREEN=0
     JUCE_MODAL_LOOPS_PERMITTED=1
@@ -41,7 +65,7 @@ target_compile_definitions(${TARGET_NAME} PRIVATE
     JUCE_LOG_ASSERTIONS=1
     JUCE_STRICT_REFCOUNTEDPOINTER=1)
 
-target_link_libraries(${TARGET_NAME} PRIVATE
+target_link_libraries (${TARGET_NAME} PRIVATE
     juce::juce_analytics
     juce::juce_audio_basics
     juce::juce_audio_devices
@@ -64,4 +88,5 @@ target_link_libraries(${TARGET_NAME} PRIVATE
     straw::juce_straw_recommended_warning_flags
     straw::juce_straw
     Python::Python
+    Melatonin::Inspector
     ${STRAW_LTO})
