--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -1,4 +1,4 @@
-juce_add_modules(juce_straw)
+juce_add_modules(juce_straw juce_python)
 
 add_library(juce_straw_recommended_warning_flags INTERFACE)
 if((CMAKE_CXX_COMPILER_ID STREQUAL "MSVC") OR (CMAKE_CXX_SIMULATE_ID STREQUAL "MSVC"))
@@ -23,3 +23,5 @@ endif()
 
 add_library(straw::juce_straw ALIAS juce_straw)
 add_library(straw::juce_straw_recommended_warning_flags ALIAS juce_straw_recommended_warning_flags)
+
+add_library(straw::juce_python ALIAS juce_python)
